proper titling and css changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ###########
 # site.title
 
-title:    'Title in Jekyll goes here'
-subtitle: 'Subtitle in Jekyll will show up here'
+title:    'Jekyll Starter Theme'
+subtitle: 'Experimenting with JST'
 
 
 ## note:
